[BlackBerry] Select popup shows blank content when its option tags contain '\' characters https://bugs.webkit.org/show_bug.cgi?id=94321

Patch by Sean Wang <Xuewen.Wang@torchmobile.com.cn> on 2012-08-20
Reviewed by George Staikos.

PR 194224

When the SelectPopupClient generates HTML, if there is a character '\' in the select options'
description, we should escape it to avoid the character being interpreted as an escape character.

* WebCoreSupport/SelectPopupClient.cpp:
(WebCore::SelectPopupClient::generateHTML):

Canonical link: https://commits.webkit.org/112365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126128 268f45cc-cd09-0410-ab3c-d52691b4dbfc